--- a/minecraft_quiz/android/app/src/main/AndroidManifest.xml
+++ b/minecraft_quiz/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <application
-        android:label="fruit_quiz"
+        android:label="minecraft_quiz"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
