--- a/template_quiz/pubspec.yaml
+++ b/template_quiz/pubspec.yaml
@@ -100,6 +100,10 @@ flutter:
     - assets/images/tiktok.png
     - assets/images/twitter.png
     - assets/images/viber.png
+    - assets/images/leader.png
+    - assets/images/titan.png
+    - assets/images/quiet.png
+    - assets/images/inprogress.png
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
