--- a/template_quiz/pubspec.yaml
+++ b/template_quiz/pubspec.yaml
@@ -104,6 +104,7 @@ flutter:
     - assets/images/titan.png
     - assets/images/quiet.png
     - assets/images/inprogress.png
+    - assets/images/quiz_logo.png
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
