--- a/fruit_quiz/pubspec.yaml
+++ b/fruit_quiz/pubspec.yaml
@@ -27,6 +27,7 @@ flutter:
     - assets/grapes.png
     - assets/kiwi.png
     - assets/pineapple.png
+    - assets/quiz_logo2.png
 
   fonts:
     - family: ComicSans # Назва сімейства шрифту (можете змінити на будь-яку назву)
