--- a/project_q/pubspec.yaml
+++ b/project_q/pubspec.yaml
@@ -64,6 +64,7 @@ flutter:
   - assets/hippocrates.png
   - assets/achilles.png
   - assets/aristotle.png
+  - assets/quiz_logo2.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
