--- a/Gigabyte_quiz/pubspec.yaml
+++ b/Gigabyte_quiz/pubspec.yaml
@@ -63,7 +63,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images/quiz-logo.png
+    - assets/images/quiz_logo2.png
     - assets/images/rtx4090.png
     - assets/images/rtx3060.png
     - assets/images/gtx1660.png
