--- a/program_test/pubspec.yaml
+++ b/program_test/pubspec.yaml
@@ -59,13 +59,13 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images/programming.jpg
     - assets/images/java.png
     - assets/images/javascript.png
     - assets/images/php.png
     - assets/images/cpp.png
     - assets/images/flutter.png
     - assets/images/python.png
+    - assets/images/quiz_logo2.png
 
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
